--- a/paulissoft-signature.htm
+++ b/paulissoft-signature.htm
@@ -1,57 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-      <title>Paulissoft signature</title>
+    <meta charset="UTF-8" />
+      <title>Paulissoft</title>
       <style>
-        table { vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial; }
+        table { border: 0px; vertical-align: -webkit-baseline-middle; font-size: medium; font-family: Arial; }
         td.top { padding: 0px; vertical-align: middle; }
         p { color: rgb(0, 0, 0); margin: 0px; font-size: 14px; line-height: 22px; }
         h3 { margin: 0px; font-size: 18px; color: rgb(0, 0, 0); }
-        table.line { width: 100% }
-        td.line { height: 1px; width: 100%; border-bottom: 1px solid blue; border-left: none; display: block; }
+        table.line { border: 0px; width: 100% }
+        td.line { padding: 0px; height: 1px; width: 100%; border-bottom: 1px solid blue; border-left: none; display: block; }
       </style>
-    </head>
-    <body>
-      <table>
-        <tbody>
-          <tr>
-            <td>
-              <table>
-                <tbody>
-                  <tr>
-                    <td class="top">
-                      <p>
-                        <span>Met vriendelijke groet / Kind regards /
-                        Cordialement,</span>
-                      </p>
-                      <p>
-                        <br />
-                      </p>
-                      <h3>
-                        Gert-Jan Paulissen
-                      </h3>
-                      <p>
-                        <span>Software architect / engineer</span>
-                      </p>
-                      <table class="line">
-                        <tbody>
-                          <tr>
-                            <td class="line">
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <img
-          src="https://github.com/gpaulissen/paulissoft/raw/main/Paulissoft.png"
-          alt="Paulissoft logo" width="400" height="400">
-      </body>
-    </html>
+  </head>
+  <body>
+    <table>
+      <tbody>
+        <tr>
+          <td class="top">
+            <p>
+              <span>Met vriendelijke groet / Kind regards /
+                Cordialement,</span>
+            </p>
+            <p>
+              <br />
+            </p>
+            <h3>
+              Gert-Jan Paulissen
+            </h3>
+            <p>
+              <span>Software architect / engineer</span>
+            </p>
+            <table class="line">
+              <tbody>
+                <tr>
+                  <td class="line">
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <img
+      src="https://github.com/gpaulissen/paulissoft/raw/main/Paulissoft.png"
+      alt="Paulissoft logo" width="400" height="400" />
+  </body>
+</html>
